[FIX] Fix issues with github integration
 - Fix dependencies pom.xml
 - Add env variables
 - Add id to issue dto