@@ -3,13 +3,11 @@ package edu.kpi;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
 import io.netty.util.internal.StringUtil;
-import org.springframework.core.env.Environment;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.KeyFactory;
 import java.security.NoSuchAlgorithmException;
 import java.security.PrivateKey;
@@ -19,21 +17,23 @@ import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.Base64;
 import java.util.Date;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Component
 public class JwtUtils {
 
-    private static final String GITHUB_APP_ID_KEY = "github.app.id";
-    private static final String GITHUB_SECRET_KEY_PATH = "github.app.key.path";
+    private static final String GITHUB_APP_ID_KEY = "${github.app.id}";
+    private static final String GITHUB_SECRET_KEY_PATH = "${github.app.key.path}";
     private static final String GITHUB_JWT_ISSUER_KEY = "iss";
 
-    private final Environment environment;
+    private final String githubAppId;
+    private final String githubSecretKeyPath;
 
-    public JwtUtils(final Environment environment) {
+    public JwtUtils(@Value(GITHUB_APP_ID_KEY) final String githubAppId,
+                    @Value(GITHUB_SECRET_KEY_PATH) final String githubSecretKeyPath) {
 
-        this.environment = environment;
+        this.githubAppId = githubAppId;
+        this.githubSecretKeyPath = githubSecretKeyPath;
     }
 
     public String generateNewToken() {
@@ -47,7 +47,7 @@ public class JwtUtils {
 
         byte[] privateKeyDER = Base64.getDecoder().decode(keyPem);
 
-        KeyFactory keyFactory = null;
+        KeyFactory keyFactory;
         PrivateKey privateKey = null;
 
         try {
@@ -60,7 +60,7 @@ public class JwtUtils {
         Instant now = Instant.now();
 
         return Jwts.builder()
-                .claim(GITHUB_JWT_ISSUER_KEY, environment.getProperty(GITHUB_APP_ID_KEY))
+                .claim(GITHUB_JWT_ISSUER_KEY, githubAppId)
                 .setIssuedAt(Date.from(now))
                 .setExpiration(Date.from(now.plus(5, ChronoUnit.MINUTES)))
                 .signWith(
@@ -72,15 +72,9 @@ public class JwtUtils {
 
     private String getSecret() {
 
-        final URL fileUrl = Optional.ofNullable(getClass().getClassLoader()
-                .getResource(environment.getProperty(GITHUB_SECRET_KEY_PATH)))
-                .orElseThrow(IllegalArgumentException::new);
-
         try {
 
-            Path path = Paths.get(fileUrl.toURI());
-
-            return Files.lines(path).collect(Collectors.joining());
+            return Files.lines(Path.of(githubSecretKeyPath)).collect(Collectors.joining());
 
         } catch (Exception e) {
 
